apps/base/swpt-debtors/swpt-login/flush-activate-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-flush-activate-users
  labels:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: login
    app: login-flush-activate-users
spec:
  replicas: 1  # Must always be 1!
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-debtors
      app.kubernetes.io/component: login
      app: login-flush-activate-users
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-debtors
        app.kubernetes.io/component: login
        app: login-flush-activate-users
    spec:
      priorityClassName: login-webserver
      containers:
        - name: flush-activate-users
          image: swpt-login
          args: ['flush_activate_users']
