apps/base/swpt-debtors/swpt-login/web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-web-server
  labels:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: login
    app: login-web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-debtors
      app.kubernetes.io/component: login
      app: login-web-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-debtors
        app.kubernetes.io/component: login
        app: login-web-server
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: swpt-debtors
                app.kubernetes.io/component: login
                app: login-web-server
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: login-webserver
      containers:
        - name: web-server
          image: swpt-login
          args: ['webserver']
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /debtors-login/email
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /debtors-login/email
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: login-web-server
  labels:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: login
    app: login-web-server
spec:
  selector:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: login
    app: login-web-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
